--- a/sample_view.xaml
+++ b/sample_view.xaml
@@ -34,6 +34,8 @@
                             @third_party_account
                     %label for='product_ids'
                     @product_ids nolabel='1'
+                    %group
+                        @finish_date $Finish_Date
                     %notebook
                         %page string='General'
                             %label for='instructions'
@@ -80,7 +82,9 @@
                 %tree $Products editable='bottom'
                     @qty options="{'create':true, 'create_edit':false, 'limit':15, 'no_open':True}" readwrite="groups('base.group_sale_salesman,sample.group_sample_user')"
                     @product_id options="{'create':false, 'create_edit':false, 'limit':15}" readwrite="groups('base.group_sale_salesman,sample.group_sample_user')"
-                    @product_lot readwrite="groups('sample.group_sample_user')"
+                    @product_lot readwrite="groups('sample.group_sample_user', 'sample.group_sample_picker')"
+                    @product_time readwrite="groups('sample.group_sample_user')" sum='Total Time' widget='float_time'
+                    @product_cost sum='Total Cost' widget='monetary' groups='sample.group_sample_costing'
 
         %menuitem @Samples groups="sample.group_sample_user,sample.group_sample_shipping" #sample_main
         %menuitem @Samples sequence='10' parent='sample_main' #sample_sub
