--- a/sample_view.xaml
+++ b/sample_view.xaml
@@ -3,91 +3,91 @@
 -act_window = 'ir.actions.act_window'
 -view = 'ir.ui.view'
 
-%openerp
-    %data noupdate='0'
+~openerp
+    ~data noupdate='0'
 
-        %record model=view #sample_request_form
+        ~record model=view #sample_request_form
             @name: sample.request.form
             @model: sample.request
             @arch type='xml'
-                %form $Sample_Request version='7.0'
-                    %header
+                ~form $Sample_Request version='7.0'
+                    ~header
                         @state widget='statusbar'
                     @id invisible='1'
-                    %group col='5'
-                        %group colspan='2'
+                    ~group col='5'
+                        ~group colspan='2'
                             @department widget='radio'
                             @user_id
                             @create_date readonly='1' $Created_on attrs="{'invisible': [('id','=',False)]}"
-                            %label for='target_date_type' string='Samples Must'
-                            %div colspan='1'
+                            ~label for='target_date_type' string='Samples Must'
+                            ~div colspan='1'
                                 @target_date_type .oe_inline
                                 by
                                 @target_date .oe_inline
                             @send_to widget='radio'
                             @partner_id on_change='onchange_partner_id(partner_id, context)' options="{'limit':15}" domain="[('customer','=',1)]"
-                        %group colspan='3'
+                        ~group colspan='3'
                             @request_ship
                             @address_type widget='radio' options="{'horizontal':1}"
                             @address widget='text'
                             @ice
                             @third_party_account
-                    %label for='product_ids'
+                    ~label for='product_ids'
                     @product_ids nolabel='1'
-                    %group
+                    ~group
                         @finish_date $Finish_Date
-                    %notebook
-                        %page string='General'
-                            %label for='instructions'
+                    ~notebook
+                        ~page string='General'
+                            ~label for='instructions'
                             @instructions
-                        %page string='Labeling'
-                            %group
-                                %group
+                        ~page string='Labeling'
+                            ~group
+                                ~group
                                     @invoice readwrite="groups('sample.group_sample_user')"
                                     @julian_date_code readwrite="groups('sample.group_sample_user')"
                                     @production_order readwrite="groups('sample.group_sample_user')"
-                        %page string='Shipping'
-                            %group
-                                %group
+                        ~page string='Shipping'
+                            ~group
+                                ~group
                                     @actual_ship readwrite="groups('sample.group_sample_user,sample.group_sample_shipping')"
                                     @actual_ship_date readwrite="groups('sample.group_sample_user,sample.group_sample_shipping')"
-                                %group
+                                ~group
                                     @shipping_cost widget='monetary' readwrite="groups('sample.group_sample_user,sample.group_sample_shipping')"
                                     @tracking readwrite="groups('sample.group_sample_user,sample.group_sample_shipping')"
-                                %group
+                                ~group
                                     @received_by readwrite="groups('sample.group_sample_user,sample.group_sample_shipping')"
                                     @received_datetime readwrite="groups('sample.group_sample_user,sample.group_sample_shipping')"
 
-        %record model=view #sample_request_list
+        ~record model=view #sample_request_list
             @name: sample.request.list
             @model: sample.request
             @arch type='xml'
-                %tree $Sample_Request
+                ~tree $Sample_Request
                     @create_date
                     @partner_id
                     @user_id
 
-        %record model=act_window #sample_request_action
+        ~record model=act_window #sample_request_action
             @name: Sample Request
             @res_model: sample.request
             @view_type: form
             @view_mode: tree,form
 
-        %menuitem @Samples #menu_sales_sample parent='base.menu_sales' action='sample_request_action'
+        ~menuitem @Samples #menu_sales_sample parent='base.menu_sales' action='sample_request_action'
 
-        %record model=view #sample_product_list
+        ~record model=view #sample_product_list
             @name: sample.product.list
             @model: sample.product
             @arch type='xml'
-                %tree $Products editable='bottom'
+                ~tree $Products editable='bottom'
                     @qty options="{'create':true, 'create_edit':false, 'limit':15, 'no_open':True}" readwrite="groups('base.group_sale_salesman,sample.group_sample_user')"
                     @product_id options="{'create':false, 'create_edit':false, 'limit':15}" readwrite="groups('base.group_sale_salesman,sample.group_sample_user')"
-                    @product_lot readwrite="groups('sample.group_sample_user', 'sample.group_sample_picker')"
+                    @product_lot readwrite="groups('sample.group_sample_user,sample.group_sample_picker')"
                     @product_time readwrite="groups('sample.group_sample_user')" sum='Total Time' widget='float_time'
                     @product_cost sum='Total Cost' widget='monetary' groups='sample.group_sample_costing'
 
-        %menuitem @Samples groups="sample.group_sample_user,sample.group_sample_shipping" #sample_main
-        %menuitem @Samples sequence='10' parent='sample_main' #sample_sub
-        %menuitem @Samples sequence='10' parent='sample_sub' action='sample_request_action' #menu_sample_sample
-        %menuitem @Customers sequence='20' parent='sample_sub' action='base.action_partner_customer_form' #menu_sample_customer
-        %menuitem @Products sequence='30' parent='sample_sub' action='product.product_normal_action' #menu_sample_product
+        ~menuitem @Samples groups="sample.group_sample_user,sample.group_sample_shipping" #sample_main
+        ~menuitem @Samples sequence='10' parent='sample_main' #sample_sub
+        ~menuitem @Samples sequence='10' parent='sample_sub' action='sample_request_action' #menu_sample_sample
+        ~menuitem @Customers sequence='20' parent='sample_sub' action='base.action_partner_customer_form' #menu_sample_customer
+        ~menuitem @Products sequence='30' parent='sample_sub' action='product.product_normal_action' #menu_sample_product
