--- a/security/sample_security.xaml
+++ b/security/sample_security.xaml
@@ -1,32 +1,32 @@
 !!!xml
-%openerp
-    %data noupdate='1'
+~openerp
+    ~data noupdate='1'
 
-        %record model='ir.module.category' #module_sample
+        ~record model='ir.module.category' #module_sample
             @name: Sample
             @description: Create and track samples
 
-        %record model='res.groups' #group_sample_user
+        ~record model='res.groups' #group_sample_user
             @name: User
             @category_id ref='module_sample'
             @comment: User can enter Sample Department data
 
-        %record model='res.groups' #group_sample_shipping
+        ~record model='res.groups' #group_sample_shipping
             @name: Shipping
             @category_id ref='module_sample'
             @comment: User can update sample shipping data
 
-        %record model='res.groups' #group_sample_picking
+        ~record model='res.groups' #group_sample_picking
             @name: Picking
             @category_id ref='module_sample'
             @comment: User can update sample lot data and finish date
 
-        %record model='res.groups' #group_sample_costing
+        ~record model='res.groups' #group_sample_costing
             @name: Costing
             @category_id ref='module_sample'
             @comment: User can view costing data
 
-        %record model='res.groups' #group_sample_manager
+        ~record model='res.groups' #group_sample_manager
             @name: Manager
             @category_id ref='module_sample'
             @comment: User has full access
