--- a/sample_data.xaml
+++ b/sample_data.xaml
@@ -3,7 +3,9 @@
 -sample_qty = 'sample.qty_label'
 
 ~openerp
-    ~data noupdate='1'
+    ~data noupdate='0'
+
+        // common quantities
 
         ~record model=sample_qty #two_oz
             @name: 2 oz
@@ -12,3 +14,41 @@
         ~record model=sample_qty #four_oz
             @name: 4 oz
             @common eval='True'
+
+        // mail message subtypes
+
+        ~record model='mail.message.subtype' #mt_sample_request_new
+            @name: Request Created
+            @res_model: sample.request
+            @default eval='False'
+            @sequence eval='1'
+            @description: Sample request created.
+
+        ~record model='mail.message.subtype' #mt_sample_request_production
+            @name: Request in Production
+            @res_model: sample.request
+            @default eval='False'
+            @sequence eval='11'
+            @description: Sample request being produced.
+
+        ~record model='mail.message.subtype' #mt_sample_request_ready
+            @name: Request Ready to Ship
+            @res_model: sample.request
+            @default eval='False'
+            @sequence eval='21'
+            @description: Sample request is ready to ship.
+
+        ~record model='mail.message.subtype' #mt_sample_request_transiting
+            @name: Request in Transit
+            @res_model: sample.request
+            @default eval='False'
+            @sequence eval='31'
+            @description: Sample request is on it's way.
+
+        ~record model='mail.message.subtype' #mt_sample_request_received
+            @name: Request Received
+            @res_model: sample.request
+            @default eval='True'
+            @sequence eval='41'
+            @description: Sample request has been received.
+
