--- a/sample_view.xaml
+++ b/sample_view.xaml
@@ -14,7 +14,8 @@
                     ~header
                         @state widget='statusbar'
                     @id invisible='1'
-                    @printer_friendly .oe_right .oe_hide nolabel='1' attrs="{'invisible':[('id','=',False)], 'readonly':True}" colspan='1'
+                    ~span
+                        @printer_friendly .oe_right .oe_hide nolabel='1' style='text-align: right !important'
                     ~group col='5'
                         ~group colspan='2'
                             @department widget='radio' writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
