--- a/sample_view.xaml
+++ b/sample_view.xaml
@@ -10,7 +10,7 @@
             @name: sample.request.form
             @model: sample.request
             @arch type='xml'
-                ~form $Sample_Request version='7.0' setup='onchange_partner_id(partner_id, contact_id, context)'
+                ~form $Sample_Request version='7.0' setup='onload(send_to, user_id, contact_id, partner_id, context)'
                     ~header
                         @state widget='statusbar'
                     @id invisible='1'
@@ -27,9 +27,9 @@
                                 @target_date_type .oe_inline writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
                                 by
                                 @target_date .oe_inline writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
-                            @send_to widget='radio' on_change='onchange_send_to(send_to, user_id, contact_id, partner_id, context)' writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
-                            @contact_id on_change='onchange_contact_id(contact_id, partner_id, send_to, context)' attrs="{'invisible':[('id','!=',False),('partner_id','!=',False),('partner_is_company','=',False)]}" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
-                            @partner_id on_change='onchange_partner_id(partner_id, contact_id, send_to, context)' options="{'limit':15}" domain="[('customer','=',1)]" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
+                            @send_to on_change='onchange_send_to(send_to, user_id, contact_id, partner_id, context)' widget='radio' writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
+                            @contact_id on_change='onchange_contact_id(send_to, user_id, contact_id, partner_id, context)' attrs="{'invisible':[('id','!=',False),('partner_id','!=',False),('partner_is_company','=',False)]}" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
+                            @partner_id on_change='onchange_partner_id(send_to, user_id, contact_id, partner_id, context)' options="{'limit':15}" domain="[('customer','=',1)]" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
                         ~group colspan='3'
                             @request_ship writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
                             @address_type widget='radio' options="{'horizontal':1}" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
