add contact to list view

--- a/sample_view.xaml
+++ b/sample_view.xaml
@@ -73,6 +73,7 @@
             @arch type='xml'
                 ~tree $Sample_Request
                     @create_date
+                    @contact_id
                     @partner_id
                     @user_id
                     @state
