--- a/sample_view.xaml
+++ b/sample_view.xaml
@@ -107,7 +107,7 @@
                     @qty_id options="{'create':true, 'create_edit':false, 'limit':15, 'no_open':True}" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
                     @product_id options="{'create':false, 'create_edit':false, 'limit':15}" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
                     @product_lot writeonly="groups('sample.group_sample_user,sample.group_sample_picker')"
-                    @product_cost sum='Total Cost' widget='monetary' groups='sample.group_sample_costing'
+                    @product_cost sum='Total Cost' widget='monetary' groups='base.group_sale_salesman'
 
         ~menuitem @Samples groups="sample.group_sample_user,sample.group_sample_shipping,sample.group_sample_guest" #sample_main
         ~menuitem @Samples sequence='10' parent='sample_main' #sample_sub
