product_lot -> product_lot_used; add product_lot_requested

--- a/sample_view.xaml
+++ b/sample_view.xaml
@@ -108,7 +108,8 @@
                 ~tree $Products editable='bottom'
                     @qty_id options="{'create':true, 'create_edit':false, 'limit':15, 'no_open':True}" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
                     @product_id options="{'create':false, 'create_edit':false, 'limit':15}" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
-                    @product_lot writeonly="groups('sample.group_sample_user,sample.group_sample_picker')"
+                    @product_lot_requested writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
+                    @product_lot_used writeonly="groups('sample.group_sample_user,sample.group_sample_picker')"
                     @product_cost sum='Total Cost' widget='monetary' groups='base.group_sale_salesman'
 
         ~menuitem @Samples groups="sample.group_sample_user,sample.group_sample_shipping,sample.group_sample_guest" #sample_main
