--- a/sample_data.xaml
+++ b/sample_data.xaml
@@ -18,11 +18,11 @@
         // mail message subtypes
 
         ~record model='mail.message.subtype' #mt_sample_request_new
-            @name: Request Created
+            @name: Request Submitted
             @res_model: sample.request
             @default eval='True'
             @sequence eval='1'
-            @description: Sample request created.
+            @description: Sample request submitted.
 
         ~record model='mail.message.subtype' #mt_sample_request_production
             @name: Request in Production
