--- a/sample_view.xaml
+++ b/sample_view.xaml
@@ -12,12 +12,12 @@
             @arch type='xml'
                 ~form $Sample_Request version='7.0' setup='onload(send_to, user_id, contact_id, partner_id, context)'
                     ~header
-                        ~button @button_sample_submit $Submit .oe_hide type='object' attrs="{'invisible': [('state','!=', 'draft')]}"
+                        ~button @button_sample_submit $Submit .oe_edit_hide type='object' attrs="{'invisible': [('state','!=', 'draft')]}"
                         @state widget='statusbar'
                     @id invisible='1'
                     @partner_is_company invisible='1'
                     ~span
-                        @printer_friendly .oe_right .oe_hide nolabel='1' style='text-align: right !important'
+                        @printer_friendly .oe_right .oe_edit_hide nolabel='1' style='text-align: right !important'
                     ~group col='5'
                         ~group colspan='2'
                             @department widget='radio' writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
@@ -62,7 +62,7 @@
                                 ~group
                                     @shipping_cost widget='monetary' writeonly="groups('sample.group_sample_user,sample.group_sample_shipping')"
                                     @tracking .oe_edit_only writeonly="groups('sample.group_sample_user,sample.group_sample_shipping')"
-                                    @tracking_url .oe_hide widget='url'
+                                    @tracking_url .oe_edit_hide widget='url'
                                 ~group
                                     @received_by writeonly="groups('base.group_sale_salesman,sample.group_sample_user,sample.group_sample_shipping')"
                                     @received_datetime writeonly="groups('base.group_sale_salesman,sample.group_sample_user,sample.group_sample_shipping')"
